# budgie-analog-clock-widget

./: README.md  meson.build
icons/: meson.build
schema/: com.github.samlane-ma.budgie-analog-clock-widget.gschema.xml
src/: RavenAnalogClock.plugin  clocksettings.vala  dropdown.vala  meson.build  ravenanalogclock.vala  ravenclockimage.vala
